--- a/Lab1 - Treva/Lab1 - Treva/Lab1 - Treva.vcxproj
+++ b/Lab1 - Treva/Lab1 - Treva/Lab1 - Treva.vcxproj
@@ -79,9 +79,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Icon.cpp" />
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Icon.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
